--- a/app/home/home.css
+++ b/app/home/home.css
@@ -1,11 +1,6 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
-    Created on : Oct 3, 2015, Oct 3, 2015 11:24:05 PM
-    Author     : mzepp
+    home.html stylesheet
+    Author: Matt Zepp
 */
 
 #personTable {
